--- a/devopsportfolio/styles.css
+++ b/devopsportfolio/styles.css
@@ -10,7 +10,7 @@
 
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 14px;
+  font-size: 0.8rem;
   color: var(--text-color);
   background-color: var(--primary-color);
   margin: 0;
@@ -19,7 +19,7 @@ body {
 }
 
 .container {
-  max-width: 80%;
+  max-width: 70%;
   margin: 0 auto;
   padding: 1rem;
 }
@@ -34,9 +34,8 @@ a:hover {
   color: #F49D13;
 }
 
-
 header {
-  font-size: 17px;
+  font-size: 1.1rem;
   text-align: center;
   padding: 0rem 0;
 }
@@ -46,11 +45,10 @@ header {
 }
 
 .subheader {
-  font-size: 1.2rem;
+  font-size: 0.9rem;
   color: var(--text-secondary);
-  margin-top: 0.5rem;
+  margin-top: 0rem;
 }
-
 
 main {
   padding: 0rem 0;
@@ -75,7 +73,6 @@ p {
   margin-bottom: 1rem;
 }
 
-
 .project-skills {
   margin-bottom: 1.5rem;
 }
@@ -94,7 +91,6 @@ p {
 .skill-tag i {
   margin-right: 0.3rem;
 }
-
 
 .video-container {
   position: relative;
@@ -132,4 +128,10 @@ footer {
 
 .social li a:hover {
   color: var(--accent-color);
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 100%;
+  }
 }
