--- a/mlportfolio/styles.css
+++ b/mlportfolio/styles.css
@@ -58,7 +58,7 @@ section {
   background-color: var(--secondary-color);
   border-radius: 20px;
   padding: 2rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   border: 1px solid rgba(255, 255, 255, .08);
   box-shadow: 0px 2px 4px var(--shadow-color);
 }
@@ -94,10 +94,9 @@ p {
 
 .video-container {
   position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
-  overflow: hidden;
-  margin-bottom: 1rem;
+  width: 80%;
+  padding-bottom: 45%;
+  margin: 0 auto;
 }
 
 .video-container iframe {
@@ -107,7 +106,6 @@ p {
   width: 100%;
   height: 100%;
 }
-
 
 footer {
   background-color: var(--secondary-color);
@@ -133,5 +131,12 @@ footer {
 @media (max-width: 768px) {
   .container {
     max-width: 100%;
+  }
+  section {
+    padding: 0.8rem;
+    margin-bottom: 0.5rem;
+  }
+  .video-container {
+    width: 100%;
   }
 }
