--- a/styles.css
+++ b/styles.css
@@ -323,7 +323,7 @@ main {
 }
 
 .portfolio-item h3 {
-	color: var(--accent-color);
+	color: var(--text-color);
 	margin-bottom: 1.5rem;
 	line-height: 1.3;
 	font-weight: 700;
@@ -461,20 +461,21 @@ a:hover {
 	}
 
 	.nav-menu li {
-		margin: 1rem 0;
+		margin: 1rem 1.5rem;
 	}
 
 	.nav-toggle {
 		display: block;
 	}
 
-	.button-group {
-		flex-direction: column;
-	}
+    .button-group {
+        flex-direction: row;
+        justify-content: space-between;
+    }
 
 	.button {
 		margin: 0.5rem 0;
-		width: 100%;
+		width: 48%;
 	}
 
 	.skills-grid,
